--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "devDependencies": {
     "tape": "^3.2.0",
     "tap-prettify": "0.0.2",
-    "from": "^0.1.3"
+    "from": "^0.1.3",
+    "concat-stream": "^1.4.7"
   },
   "dependencies": {
     "through": "^2.3.6"
