--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
   ],
   "author": "Jan Bölsche <jan@lagomorph.de>",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/regular/binary-stream-replace.git"
+  },
+  "bugs": {
+    "url": "https://github.com/regular/binary-stream-replace/issues"
+  },
   "devDependencies": {
     "tape": "^3.2.0",
     "concat-stream": "^1.4.7"
@@ -21,5 +28,21 @@
   "dependencies": {
     "through": "^2.3.6",
     "debug": "^2.1.1"
+  },
+  "testling": {
+    "files": "test/stream.js",
+    "browsers": [
+      "ie/8..latest",
+      "firefox/17..latest",
+      "firefox/nightly",
+      "chrome/22..latest",
+      "chrome/canary",
+      "opera/12..latest",
+      "opera/next",
+      "safari/5.1..latest",
+      "ipad/6.0..latest",
+      "iphone/6.0..latest",
+      "android-browser/4.2..latest"
+    ]
   }
 }
